syntax = "proto3";

package grpc_api;

option go_package = "/gen/grpc_api";

service UsersService {
  rpc GetAll () returns ();
}