syntax = "proto3";

package users;

option go_package = "/gen/grpc_api";


// The greeting service definition.
service UsersService {
  // Sends a greeting
  rpc GetAllUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

// The User message contains the user info.
message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email_address = 4;
  string phone_number = 5;
}

// The ListUsersResponse message containing the list of all user's.
message ListUsersResponse {
  repeated User list_users = 1;
}

message ListUsersRequest {

}


